I added 4 variables to control the animation speed for the 4 types of movement. Dragging, Reversing, Releasing and Clicking the button. I modified the logic behind removing the cards, i no longer add a removed class. Added a function to show a small effect when pressing the buttons.

--- a/style.css
+++ b/style.css
@@ -116,13 +116,19 @@ body {
 
 .card {
   touch-action: none !important;
-  transition: transform 0.7s linear;
 }
 
-.heart-overlay,
+.keypress {
+  border: 4px solid rgb(222, 39, 39);
+  transition: border 0.2s, transform 0.2s;
+  transform: scale(1.1);
+}
+
+/* not used anymore  */
+/* .heart-overlay,
 .nope-overlay {
   pointer-events: none;
-  position: fixed; /* relative to viewport */
+  position: fixed; 
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -138,7 +144,7 @@ body {
   font-size: 30px;
   cursor: pointer;
   opacity: 0;
-}
+} */
 
 .show {
   opacity: 1;
